feature: parsing query
