# openapi_server/models/data_request_body.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server.models.query_value import QueryValue
+from openapi_server import util
+
+from openapi_server.models.query_value import QueryValue  # noqa: E501
+
+class DataRequestBody(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, values=None):  # noqa: E501
+        """DataRequestBody - a model defined in OpenAPI
+
+        :param values: The values of this DataRequestBody.  # noqa: E501
+        :type values: List[QueryValue]
+        """
+        self.openapi_types = {
+            'values': List[QueryValue]
+        }
+
+        self.attribute_map = {
+            'values': 'values'
+        }
+
+        self._values = values
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DataRequestBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DataRequestBody of this DataRequestBody.  # noqa: E501
+        :rtype: DataRequestBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def values(self):
+        """Gets the values of this DataRequestBody.
+
+
+        :return: The values of this DataRequestBody.
+        :rtype: List[QueryValue]
+        """
+        return self._values
+
+    @values.setter
+    def values(self, values):
+        """Sets the values of this DataRequestBody.
+
+
+        :param values: The values of this DataRequestBody.
+        :type values: List[QueryValue]
+        """
+
+        self._values = values
